Fixes layout shifts again

--- a/src/site/_includes/css/06-components/_hero.css
+++ b/src/site/_includes/css/06-components/_hero.css
@@ -17,7 +17,7 @@
 .c-hero__title {
   display: flex;
   gap: 0.5em;
-  font-size: clamp(1.5em, 3.5vw, 4em);
+  font-size: clamp(5em, 3.5vw, 4em);
   text-align: start;
 }
 
