--- a/src/site/_includes/css/custom/glitch.css
+++ b/src/site/_includes/css/custom/glitch.css
@@ -1,7 +1,7 @@
 .glitch-text {
   position: relative;
   color: inherit;
-  display: inline-block;
+  display: inline;
   font-family: var(--font-mono);
 }
 
